fixed gap issue in chrome

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -19,6 +19,7 @@
 
 .link {
   color: inherit;
+  margin-left: 20px;
 }
 
 .icon:hover {
@@ -32,5 +33,5 @@
 
 .icons {
     display: flex;
-    gap: 20px;
+    /* gap: 20px; */
 }
