--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -32,10 +32,11 @@
 .tools {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    /* gap: 20px; */
 }
 
 .tools a {
+    margin-left: 20px;
     text-decoration: none;
     color: inherit;
 }
@@ -44,6 +45,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    /* gap: 10px; */
     /* color: white; */
 }
